--- a/Data/i18n/zh_cn.yml
+++ b/Data/i18n/zh_cn.yml
@@ -13,6 +13,7 @@ search:
   plain_search: "\u666E\u901A\u641C\u7D22"
   ques: "\u8F93\u5165\u5173\u952E\u8BCD"
   regex_search: "\u6B63\u5219\u641C\u7D22"
+  warn_empty: "\u8F93\u5165\u4E3A\u7A7A\uFF0C\u662F\u5426\u7EE7\u7EED\uFF1F"
 setting:
   app:
     clean_cache: "\u6E05\u9664\u7F13\u5B58"
